# hyprland-confined-floats

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hyprpm.toml
src/: globals.hpp  main.cpp
